# workspace

./: .gitignore  Cargo.toml  HARDENING.md  README.md
.github/workflows/: ci.yml
examples/: coding.workspace.json
src/: app_support.rs  capture.rs  cli.rs  configure.rs  error.rs  execute.rs  filter.rs  lib.rs  main.rs  model.rs  output.rs  plan.rs  restore.rs  selftest.rs  storage.rs  style.rs  verify.rs  world.rs
src/macos/: accessibility.rs  app.rs  chrome.rs  display.rs  mod.rs  util.rs  window.rs
tests/: app_support.rs  common_apps_fixture.rs  live_smoke.rs  plan.rs  plan_properties.rs  remap.rs  restore_policy.rs  snapshot.rs
tests/fixtures/: common_apps.workspace.json
