[package]
name = "workspace"
version = "0.1.0"
edition = "2021"
description = "A macOS-first CLI for saving and restoring desktop window workspaces."
readme = "README.md"
license = "MIT"
publish = false

[[bin]]
name = "workspace"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
core-foundation = "0.10"
core-graphics = "0.24"
dirs = "5.0"
dialoguer = "0.11"
libc = "0.2"
objc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.10"

[lints.rust]
unexpected_cfgs = "allow"
